--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="32dp"
-    android:background="#FAFAFA">
+    android:background="#353535">
 
     <ImageView
         android:src="@android:drawable/ic_lock_idle_lock"
