--- a/app/src/main/res/layout/fragment_historial.xml
+++ b/app/src/main/res/layout/fragment_historial.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:background="#353535"
+        android:background="#EEEEEE"
         android:padding="8dp"
         android:layout_marginBottom="10dp">
 
