--- a/app/src/main/res/layout/fragment_recibo.xml
+++ b/app/src/main/res/layout/fragment_recibo.xml
@@ -23,14 +23,25 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabImprimir"
-        android:src="@android:drawable/ic_menu_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@android:drawable/ic_menu_share"
+        app:backgroundTint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="#FFFFFF"
-        app:backgroundTint="#000000"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="#FFFFFF" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSimular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:src="@android:drawable/ic_menu_view"
+        app:backgroundTint="#2196F3"
+        app:layout_constraintBottom_toTopOf="@+id/fabImprimir"
+        app:layout_constraintEnd_toEndOf="@+id/fabImprimir"
+        app:tint="#FFFFFF" />
 
     <View
         android:background="#000000"
