--- a/app/src/main/res/layout/dialog_plato.xml
+++ b/app/src/main/res/layout/dialog_plato.xml
@@ -33,6 +33,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:text="Categoría:"
+        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Spinner
+        android:id="@+id/spCategoria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"/>
+
     <CheckBox
         android:id="@+id/chkEsCocina"
         android:text="Enviar a Cocina"
